@startuml
!include skin.pu

interface ConfigurationRepository {
~ ConfigurationItem getByConfigKey(String)
~ boolean existsByConfigKey(String)
}
interface ErrorRepository {
}
interface AnschlussRepository {
~ Anschluss getAnschlussByName(String)
~ Boolean existsAnschlussByName(String)
}
interface ConsumerRepository {
~ Consumer getConsumerByName(String)
~ void deleteConsumerByName(String)
~ boolean existsByName(String)
}
interface ChargeboxRepository {
~ ChargeBox getChargeBoxByName(String)
~ ChargeBox getChargeBoxByEvseid(String)
~ boolean existsChargeBoxByName(String)
~ boolean existsByEvseid(String)
~ List<ChargeBox> findChargeBoxesByCalibratedFalseAndConnectedTrue()
}


jpaRepository <|-- ConfigurationRepository
jpaRepository <|-- ErrorRepository
jpaRepository <|-- AnschlussRepository
jpaRepository <|-- ConsumerRepository
jpaRepository <|-- ChargeboxRepository
@enduml